--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "codeCanary",
-  "version": "1.0.0",
+  "name": "code-canary",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "bootbot start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "bootbot": "^1.0.6",
-    "config": "^1.21.0"
+    "config": "^1.21.0",
+    "prettier": "^1.18.2"
   },
   "devDependencies": {
     "bootbot-cli": "^1.0.5"
